agregando icono favicon

--- a/views/signup.1.html
+++ b/views/signup.1.html
@@ -12,6 +12,8 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <!-- Flags -->
     <link href="../vendors/flags/flags.css" rel=stylesheet type="text/css">
+    <!-- Logo favicon -->
+    <link rel="icon" type="image/png" href="../assets/icons/favicon.png"/>
     <!-- main.css -->
     <link rel="stylesheet" href="../css/main.css">
 </head>
