--- a/views/signup.2.html
+++ b/views/signup.2.html
@@ -10,7 +10,9 @@
     <link href="../vendors/bootstrap/css/bootstrap.css" rel="stylesheet">
     <!-- Raleway font -->
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
-    <!-- Flags -->
+    <!-- Logo favicon -->
+    <link rel="icon" type="image/png" href="../assets/icons/favicon.png"/>
+    <!-- main.css -->
     <link rel="stylesheet" href="../css/main.css">
 </head>
 <body>
