--- a/views/signup.3.html
+++ b/views/signup.3.html
@@ -12,6 +12,8 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     <!-- Font-awesome -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <!-- Logo favicon -->
+    <link rel="icon" type="image/png" href="../assets/icons/favicon.png"/>
     <!-- main.css -->
     <link rel="stylesheet" href="../css/main.css">
 </head>
