--- a/views/verify-phone-number.html
+++ b/views/verify-phone-number.html
@@ -14,6 +14,8 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <!-- Flags -->
     <link href="../vendors/flags/flags.css" rel=stylesheet type="text/css">
+    <!-- Logo favicon -->
+    <link rel="icon" type="image/png" href="../assets/icons/favicon.png"/>
     <!-- main.css -->
     <link rel="stylesheet" href="../css/main.css">
 </head>
