subiendo README y estilos

--- a/views/signup.1.html
+++ b/views/signup.1.html
@@ -30,7 +30,8 @@
                             <!--  back button -->
                             <br>
                             <br>
-                            <a href="#" type="button" class="btn text-left inline-block padding-sign-up">
+                            <br>
+                            <a href="begin.view.html" type="button" class="btn text-left inline-block padding-sign-up">
                                 <span class="glyphicon glyphicon-chevron-left glyphicon-back-btn" aria-hidden="true"></span>
                             </a>
                             <!-- title -->
@@ -51,9 +52,9 @@
                                     <li class="text-center"><img src="../vendors/flags/blank.gif" class="flag flag-us" alt="USA"></li>
                                     <!-- <li role="separator" class="divider"></li> -->
                                 </ul>
-                            </div> <!-- input-group-btn END-->
+                            </div> <!-- input-group-btn END   disabled-->
                             <label for="phone-number"></label>
-                            <input type="tel" class="form-control" id="phone-number" placeholder="Insert phone number..." disabled>
+                            <input type="tel" class="form-control" id="phone-number-input" placeholder="Insert phone number...">
                         </div> <!-- input-group END-->
                         <span id="helpBlock" class="help-block text-center">We'll send you a text to verify your phone.</span>
                         <!-- "NEXT" button -->
@@ -61,8 +62,7 @@
                         <a class="btn btn-default btn-next text-uppercase" href="#" role="button" disabled>Next</a>
                     </form>  <!-- form END-->
                 </div>  <!-- col-md-12 END-->
-            </div> <!-- .row END-->
-        </div> <!-- .container align-items outline vh70 END-->
+            </div> <!-- .row END-->        </div> <!-- .container align-items outline vh70 END-->
     </main>
 
      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
