--- a/views/begin.view.html
+++ b/views/begin.view.html
@@ -13,7 +13,7 @@
     <!-- Font-awesome -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <!-- Logo favicon -->
-    <link rel="icon" type="image/png" href="../assets/icons/favicon.png" />
+    <link rel="icon" type="image/png" href="../assets/icons/favicon.png"/>
     <!-- main.css -->
     <link rel="stylesheet" href="../css/main.css">
 </head>
@@ -29,7 +29,7 @@
             <!-- buttons -->
             <div class="btn-grupo">
                 <a class="btn btn-default btn-lg lyft-btn-1" href="#" role="button">Login</a>
-                <a class="btn btn-default btn-lg lyft-btn-1" href="#" role="button">Sign up</a>
+                <a class="btn btn-default btn-lg lyft-btn-1" href="signup.1.html" role="button">Sign up</a>
             </div>    
         </div>    
     </main>
@@ -39,6 +39,6 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="../vendors/bootstrap/js/bootstrap.min.js"></script>
     <!-- app.js -->
-    <script type="text/javascript" src="js/app.js"></script>
+    <!-- <script type="text/javascript" src="../js/app.js"></script> -->
 </body>
 </html>
